# 1-cmake-implementantion-accounting-sheet

./: CMakeLists.txt  README.md
src/: functions.cpp
